<resources>
    <string name="app_name">Ver</string>
    <string name="sloganone">One for all, all for TV.</string>
    <string name="action_settings">Settings</string>
    <string name="nevermind">Nevermind</string>

    <!-- Important Strings -->
    <string name="guideboxApiURL"><!--API_URL--></string>
    <string name="guideboxApiKey"><!--API_KEY--></string>

    <string name="findatitle">Find a title . . .</string>
    <string name="find">Find</string>
    <string name="mycollection">My Collection</string>

    <string name="title_activity_welcome">Welcome to Ver</string>
    <string name="loginbutton">Login</string>
    <string name="registerbutton">Register</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to Home -->
    <string name="home">Home</string>

    <!-- Strings related to Search -->
    <string name="title_activity_searching">Searching</string>
    <string name="availableon">Available On . . .</string>
    <string name="loadingsources">Loading sources . . . </string>
    <string name="searching">Searching . . . </string>

    <!-- Strings related to My Collection -->
    <string name="title_activity_my_collection">My Collection</string>
    <string name="title_activity_collection_item_viewer">Collection Item</string>
    <string name="title_name">Title Name</string>
    <string name="title_year">Title Year</string>
    <string name="title_rating">Title Rating</string>
    <string name="separator">—</string>
    <string name="title_overview">Loading title overview . . .</string>
    <string name="delete">Remove</string>

    <!-- Strings related to login -->
    <string name="prompt_firstname">First name</string>
    <string name="prompt_lastname">Last name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_register">Register</string>

    <!-- Services -->
    <string name="whatservices">Which of these do you use or subscribe to?</string>
    <string name="netflix">Netflix</string>
    <string name="hulu">Hulu</string>
    <string name="amazonprime">Amazon Instant Video</string>
    <string name="buyfromamazon">Are you interested in content you can purchase or rent from Amazon?</string>
    <string name="crunchyroll">Crunchyroll</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="free">Free</string>
    <string name="paid">Paid</string>
    <string name="done">Done</string>

    <!-- Strings related to Settings -->
    <string name="settings">Settings</string>
    <string name="myaccount">My Account</string>
    <string name="sendfeedback">Send Feedback</string>
    <string name="aboutver">About Ver</string>
    <string name="title_activity_about_ver">About Ver</string>
    <string name="about_ver_text">Copyright 2016 - Ethan and Dana Turner. \n\n Streaming service search is powered by Guidebox. \n\n Reach us at < email > </string>
    <string name="title_activity_my_account">My Ver</string>
    <string name="usernameplaceholder">Loading user . . . </string>
    <string name="dvdcapacityplaceholder">Loading capacity . . . </string>
    <string name="upgradecapacity">Upgrade</string>
    <string name="signout">Sign Out</string>

    <!-- Ad Units -->
    <string name="AdPublisherID"><!-- AD_UNIT_ID --></string>
    <string name="HomeAdBanner"><!-- AD_UNIT_ID --></string>
    <string name="SearchingInterstitial"><!-- AD_UNIT_ID --></string>
    <string name="title_activity_services">Services</string>
    <string name="title_activity_results">Search Results</string>
    <string name="title_activity_results_item">Result</string>
    <string name="title_activity_collection_searching">Searching</string>
    <string name="title_activity_collection_search_results">Search Results</string>

</resources>
