<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="turnerapps.vertv.Services"
    tools:showIn="@layout/activity_services">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!-- Instructions -->
        <TextView
            android:id="@+id/servicesInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#343434"
            android:textSize="16sp"
            android:text="@string/whatservices"
            android:layout_marginTop="25dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin" />


        <!-- Netflix -->
        <TextView
            android:id="@+id/servicesNetflix"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#343434"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:text="@string/netflix"
            android:textAlignment="center"
            android:layout_below="@id/servicesInstructions"
            android:textStyle="normal|bold" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/netflixToggle"
            android:layout_below="@id/servicesNetflix"
            android:layout_centerHorizontal="true"
            android:textOff="@string/no"
            android:textOn="@string/yes" />

        <!-- Hulu -->
        <TextView
            android:id="@+id/servicesHulu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#343434"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:text="@string/hulu"
            android:textAlignment="center"
            android:layout_below="@id/netflixToggle"
            android:textStyle="normal|bold" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/huluToggle"
            android:layout_below="@id/servicesHulu"
            android:layout_centerHorizontal="true"
            android:textOff="@string/free"
            android:textOn="@string/paid" />

        <!-- Amazon Instant Video -->
        <TextView
            android:id="@+id/servicesAmazon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#343434"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:text="@string/amazonprime"
            android:textAlignment="center"
            android:layout_below="@id/huluToggle"
            android:textStyle="normal|bold" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/amazonToggle"
            android:layout_below="@id/servicesAmazon"
            android:layout_centerHorizontal="true"
            android:textOff="@string/free"
            android:textOn="@string/paid" />

        <!-- Amazon Purchase -->
        <TextView
            android:id="@+id/servicesAmazonPurhcase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#343434"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:text="@string/buyfromamazon"
            android:textAlignment="center"
            android:layout_below="@id/amazonToggle"
            android:textStyle="normal|bold"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/amazonPurchaseToggle"
            android:layout_below="@id/servicesAmazonPurhcase"
            android:layout_centerHorizontal="true"
            android:textOff="@string/no"
            android:textOn="@string/yes" />

        <!-- Crunchyroll -->
        <TextView
            android:id="@+id/servicesCrunchyroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#343434"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:text="@string/crunchyroll"
            android:textAlignment="center"
            android:layout_below="@id/amazonPurchaseToggle"
            android:textStyle="normal|bold" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/crunchyrollToggle"
            android:layout_below="@id/servicesCrunchyroll"
            android:layout_centerHorizontal="true"
            android:textOff="@string/free"
            android:textOn="@string/paid" />

        <!-- Done -->
        <Button
            android:id="@+id/servicesDoneButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:background="@color/colorPrimary"
            android:layout_below="@id/crunchyrollToggle"
            android:textColor="@android:color/white"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            ></Button>

    </RelativeLayout>

</android.support.v4.widget.NestedScrollView>