<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_collection_item_viewer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="turnerapps.vertv.CollectionItemViewer"
    tools:showIn="@layout/activity_collection_item_viewer">

    <!-- Poster -->
    <ImageView
        android:src="@drawable/common_full_open_on_phone"
        android:id="@+id/itemPoster"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_height="100dp"
        android:layout_width="80dp" />

    <!-- Title Name -->
    <TextView
        android:id="@+id/itemViewerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_name"
        android:textColor="#040404"
        android:typeface="sans"
        android:textSize="18sp"
        android:layout_toRightOf="@id/itemPoster"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        />

    <!-- Year -->
    <TextView
        android:id="@+id/itemViewerYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#343434"
        android:textSize="16sp"
        android:layout_marginTop="1dip"
        android:text="@string/title_year"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_below="@id/itemViewerTitle"
        android:layout_toRightOf="@id/itemPoster"
        android:textStyle="normal|italic" />

    <!-- Separator -->
    <TextView
        android:id="@+id/itemViewerSeparator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#343434"
        android:textSize="16sp"
        android:layout_marginTop="1dip"
        android:text="@string/separator"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_below="@id/itemViewerTitle"
        android:layout_toRightOf="@id/itemViewerYear"
        android:textStyle="normal|italic" />

    <!-- Rating -->
    <TextView
        android:id="@+id/itemViewerRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#343434"
        android:textSize="16sp"
        android:layout_marginTop="1dip"
        android:text="@string/title_rating"
        android:layout_below="@id/itemViewerTitle"
        android:layout_toRightOf="@id/itemViewerSeparator"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:textStyle="normal|italic" />

    <!-- Overview -->
    <TextView
        android:id="@+id/itemViewerOverview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#343434"
        android:textSize="16sp"
        android:maxLines="3"
        android:maxHeight="60dp"
        android:text="@string/title_overview"
        android:layout_below="@id/itemViewerRating"
        android:layout_toRightOf="@id/itemPoster"
        android:layout_marginLeft="25dp" />

    <!-- Available On . . .  -->
    <TextView
        android:id="@+id/itemViewerAvailableOn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/availableon"
        android:textColor="#040404"
        android:typeface="sans"
        android:textSize="16sp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="5dp"
        android:layout_below="@id/itemPoster"
        />

    <!-- Separator -->
    <View android:background="#C64247"
        android:layout_width = "300dp"
        android:layout_height="2dp"
        android:layout_below="@id/itemViewerAvailableOn"
        android:layout_marginTop="2dp"
        android:layout_marginLeft="5dp" />

    <!-- Sources -->
    <TextView
        android:id="@+id/itemViewerSources"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#343434"
        android:textSize="16sp"
        android:maxLines="4"
        android:text="@string/loadingsources"
        android:layout_marginTop="15dp"
        android:layout_below="@id/itemViewerAvailableOn"
        android:layout_marginLeft="25dp" />

</RelativeLayout>