<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="turnerapps.vertv.WelcomeActivity"
    android:background="@color/colorPrimary">

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="36sp"
        android:textStyle="normal|bold"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/background_light" />

    <TextView
        android:text="@string/sloganone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="normal|italic"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/loginbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginbutton"
        android:background="@color/statusBarOrange"
        android:textColor="@android:color/background_light"
        android:layout_marginBottom="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/registerbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registerbutton"
        android:background="@color/statusBarOrange"
        android:textColor="@android:color/background_light"
        android:layout_marginBottom="14dp"
        android:layout_above="@+id/loginbutton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
