<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="turnerapps.vertv.Home"
    tools:showIn="@layout/activity_home"
    android:background="@color/lightWhite" >

    <EditText
        android:layout_width="wrap_content"
        android:inputType="textCapWords"
        android:ems="10"
        android:id="@+id/search_field"
        android:maxLines="1"
        android:background="@drawable/edittextbg"
        android:height="40dp"
        android:hint="@string/findatitle"
        android:textColorHint="@color/colorPrimary"
        android:textSize="20sp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hapticFeedbackEnabled="true"
        android:textColor="@color/colorPrimary"
        android:layout_height="50dp"
        android:imeOptions="actionDone"
        />

    <Button
        android:text="@string/mycollection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mycollectionbutton"
        android:background="@color/colorAccent"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:typeface="normal"
        android:fontFamily="sans-serif-medium"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="84dp" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/HomeAdView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/HomeAdBanner"
        android:foregroundGravity="bottom"
        android:layout_alignParentBottom="true"
        >
    </com.google.android.gms.ads.AdView>

    <Button
        android:text="@string/find"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:id="@+id/gosearchbutton"
        android:background="@color/colorAccent"
        android:textColor="@android:color/background_light"
        android:layout_width="140dp"
        android:textStyle="normal|bold"
        android:textSize="18sp"
        android:layout_below="@+id/search_field"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logotextview"
        android:textColor="@color/colorPrimary"
        android:textSize="48sp"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:layout_above="@+id/search_field"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>